imported  some modules, and made some changes to the test

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error"
    ]
   },
@@ -1221,8 +1221,112 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confirmed Cases - MSE: 123998084.5567145\n",
+      "Deaths - MSE: 2586.1354480916034\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading train and test data\n",
+    "train_df = pd.read_csv('data/train_data.csv')\n",
+    "test_df = pd.read_csv('data/test_data.csv')\n",
+    "\n",
+    "# Selection of features and target variables\n",
+    "features = ['Lat', 'Long_', 'Case_Fatality_Ratio']  \n",
+    "X_train = train_df[features]\n",
+    "y_train_confirmed = train_df['Confirmed']\n",
+    "y_train_deaths = train_df['Deaths']\n",
+    "\n",
+    "X_test = test_df[features]\n",
+    "y_test_confirmed = test_df['Confirmed']\n",
+    "y_test_deaths = test_df['Deaths']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xgboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msvm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SVR\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgboost\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgb\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlightgbm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlgb\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Define models\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "import xgboost as xgb\n",
+    "import lightgbm as lgb\n",
+    "\n",
+    "# Define models\n",
+    "models = {\n",
+    "    'RandomForest': RandomForestRegressor(),\n",
+    "    'XGBoost': xgb.XGBRegressor(),\n",
+    "    'LightGBM': lgb.LGBMRegressor(),\n",
+    "    'SVR': SVR()\n",
+    "}\n",
+    "\n",
+    "# Train and evaluate each model\n",
+    "results = {}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train, y_train_confirmed)\n",
+    "    y_pred_confirmed = model.predict(X_test)\n",
+    "    mse_confirmed = mean_squared_error(y_test_confirmed, y_pred_confirmed)\n",
+    "    \n",
+    "    model.fit(X_train, y_train_deaths)\n",
+    "    y_pred_deaths = model.predict(X_test)\n",
+    "    mse_deaths = mean_squared_error(y_test_deaths, y_pred_deaths)\n",
+    "    \n",
+    "    results[name] = {'Confirmed_MSE': mse_confirmed, 'Deaths_MSE': mse_deaths}\n",
+    "\n",
+    "# Print results\n",
+    "for name, metrics in results.items():\n",
+    "    print(f\"{name} - Confirmed Cases MSE: {metrics['Confirmed_MSE']}, Deaths MSE: {metrics['Deaths_MSE']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Model Selection and Training\n",
+    "model_confirmed = RandomForestRegressor()\n",
+    "model_deaths = RandomForestRegressor()\n",
+    "\n",
+    "model_confirmed.fit(X_train, y_train_confirmed)\n",
+    "model_deaths.fit(X_train, y_train_deaths)\n",
+    "\n",
+    "# Model Evaluation\n",
+    "y_pred_confirmed = model_confirmed.predict(X_test)\n",
+    "y_pred_deaths = model_deaths.predict(X_test)\n",
+    "\n",
+    "print('Confirmed Cases - MSE:', mean_squared_error(y_test_confirmed, y_pred_confirmed))\n",
+    "print('Deaths - MSE:', mean_squared_error(y_test_deaths, y_pred_deaths))\n",
+    "\n",
+    "# Prediction for all regions\n",
+    "predictions_confirmed = model_confirmed.predict(new_df[features])\n",
+    "predictions_deaths = model_deaths.predict(new_df[features])\n",
+    "\n",
+    "new_df['predicted_confirmed_cases'] = predictions_confirmed\n",
+    "new_df['predicted_deaths'] = predictions_deaths\n",
+    "\n",
+    "# Save the predictions to a new CSV file\n",
+    "new_df.to_csv('predictions_RF.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
